# registration-microservice

./: .gitignore  Cargo.toml  build.rs  mb-camps.txt
src/: lib.rs  mb-camps.txt  queue_actor.rs  server.rs  test.html  worker.rs
templates/: register.html
