[package]
name = "registration-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7"
actix-web = "0.7"
askama = "0.7"
chrono = "0.4"
image = "0.21"
indexmap = "1.0"
failure = "0.1"
futures = "0.1"
log = "0.4"
env_logger = "0.5"
pretty_env_logger = "0.2"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
uuid = "0.7"

[dependencies.lapin]
version = "0.15"
package = "lapin-futures"

[[bin]]
name = "registration-server"
path = "src/server.rs"
test = false

[[bin]]
name = "registration-worker"
path = "scr/worker.rs"
test = false

[build-dependencies]
askama = "0.7"